--- a/01/style.css
+++ b/01/style.css
@@ -1,114 +1,91 @@
-/* 'Global reset' -> fazer em todo novo projeto */
+/* Global reset */
 * {
   margin: 0;
   padding: 0;
 }
 
-body {
-  font-family: sans-serif, Arial, Helvetica;
-  font-size: 18px;
-  position: relative;
-}
-
-.container {
-  width: 900px;
-  margin: 0 auto;
-}
-
-h1 {
-  color: rgb(43, 157, 196);
-  text-transform: uppercase;
-  margin-left: 40px;
-  font-style: italic;
-}
-
 article {
-  margin-bottom: 60px;
-}
-
-/* article p:nth-child(2) {
-  color: rgb(150, 14, 14);
-} */
-
-aside {
-  background-color: rgb(240, 240, 240);
   border: 3px solid black;
-  padding: 50px 0px;
+  font-size: 1.05rem;
+  line-height: 1.3;
+  margin: 50px auto;
+  width: 825px;
 }
 
-.header-1 {
+.title {
+  height: 70px;
+  background-color: rgba(241, 236, 236, 0.616);
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 0.4px;
+  word-spacing: 3px;
+}
+
+.shoesImage {
+  width: 275px;
+  height: 275px;
+}
+
+.pTitle {
+  margin: 0;
+  padding: 15px;
+}
+
+/* PRODUCT INFO */
+.price {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
+.shipping {
+  font-size: 0.7rem;
+  color: grey;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.more-info:link,
+.more-info:visited {
+  color: black;
+}
+
+.more-info:hover {
+  text-decoration: none;
+}
+
+.prodDetails {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+
+.product-list {
+  list-style-type: square;
+  margin-left: 17px;
+  line-height: 2;
+  font-size: 16px;
+}
+
+/* CART */
+.add-cart {
   width: 100%;
-  height: 110px;
-  padding-top: 30px;
-  background-color: rgb(240, 240, 240);
+  height: 60px;
+  margin: 0;
+  background-color: black;
+  color: white;
+  text-transform: uppercase;
+  font-size: 16px;
 }
 
-.header-2 {
-  margin: 30px 0;
-  position: relative;
-}
-
-.top {
-  width: 100%;
-  height: 10px;
-  background-color: rgb(43, 157, 196);
-}
-
-p {
-  line-height: 1.5;
-  margin-bottom: 15px;
-}
-
-.mdnWeb {
-  margin-bottom: 50px;
-}
-
-.ulMenu {
-  list-style: none;
-}
-
-.liMenu {
-  float: left;
-  margin: 15px 50px 0px 45px;
-}
-
-.related {
-  list-style: none;
-}
-
-li {
-  margin-bottom: 8px;
-}
-
-button {
-  padding: 10px;
-  font-size: 20px;
+.add-cart:hover {
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  border-style: none;
   cursor: pointer;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
-/* Links */
-
-a:link {
-  text-decoration: none;
-  color: rgb(43, 157, 196);
-}
-
-a:visited {
-  text-decoration: none;
-  color: rgb(43, 157, 196);
-}
-
-/* Images */
-
-.girlIMG {
-  width: 70px;
-  height: auto;
-}
-
-.postIMG {
-  width: 50%;
-  height: auto;
+  border-top: 3px solid black;
 }
