--- a/02/style.css
+++ b/02/style.css
@@ -1,143 +1,151 @@
-/* 'Global reset' -> fazer em todo novo projeto */
+/* Global reset */
 * {
   margin: 0;
   padding: 0;
 }
 
-body {
-  font-family: sans-serif, Arial, Helvetica;
-  font-size: 18px;
-  position: relative;
-}
-
-.container {
-  width: 900px;
-  margin: 0 auto;
-}
-
-h1 {
-  color: rgb(43, 157, 196);
-  text-transform: uppercase;
-  margin-left: 40px;
-  font-style: italic;
-}
-
-h1::first-letter {
-  font-style: normal;
-  margin-right: 5px;
-}
-
 article {
-  margin-bottom: 60px;
-}
-
-/* article p:nth-child(2) {
-  color: rgb(150, 14, 14);
-} */
-
-aside {
-  background-color: rgb(240, 240, 240);
   border: 3px solid black;
-  padding: 50px 0px;
-}
-
-.header-1 {
-  width: 100%;
-  height: 110px;
-  padding-top: 30px;
-  background-color: rgb(240, 240, 240);
-}
-
-.header-2 {
-  margin: 30px 0;
+  font-size: 1.05rem;
+  line-height: 1.3;
+  margin: 50px auto;
+  width: 825px;
   position: relative;
 }
 
-.top {
-  width: 100%;
-  height: 10px;
-  background-color: rgb(43, 157, 196);
+.title {
+  height: 60px;
+  background-color: rgba(241, 236, 236, 0.616);
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 0.4px;
+  word-spacing: 3px;
 }
 
-p {
-  line-height: 1.5;
-  margin-bottom: 15px;
+.shoesImage {
+  width: 275px;
+  height: 275px;
 }
 
-.mdnWeb {
-  margin-bottom: 50px;
+.pTitle {
+  margin: 0;
+  padding: 15px;
 }
 
-.ulMenu {
-  list-style: none;
-}
-
-nav a:link {
-  display: inline-block;
-  margin-left: 45px;
-  margin-top: 15px;
-}
-
-.related {
-  list-style: none;
-}
-
-li {
-  margin-bottom: 8px;
-}
-
-button {
-  padding: 10px;
-  font-size: 20px;
-  cursor: pointer;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
-/* Links */
-
-a:link {
-  text-decoration: none;
-  color: rgb(43, 157, 196);
-}
-
-a:visited {
-  text-decoration: none;
-  color: rgb(43, 157, 196);
-}
-
-/* Images */
-
-.girlIMG {
-  width: 70px;
-  height: auto;
-}
-
-.postIMG {
-  width: 50%;
-  height: auto;
-}
-
-/* Irmãos adjacentes (+) */
-h3 + p::first-line {
-  color: red;
-}
-
-/* After/Before */
-
-h2 {
-  position: relative;
-}
-
-h2::after {
-  content: "TOP";
-  border: 1px solid black;
-  font-size: 16px;
+/* INFORMAÇÕES DO PRODUTO */
+.price {
+  font-size: 1.5rem;
   font-weight: bolder;
-  background-color: yellow;
-  padding: 3px 8px; /*Para ter paddin precisa ser inline-block*/
+}
+
+.shipping {
+  font-size: 0.7rem;
+  color: grey;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.more-info:link,
+.more-info:visited {
+  color: black;
+}
+
+.more-info:hover {
+  text-decoration: none;
+}
+
+.prodDetails {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+
+.product-list {
+  list-style-type: square;
+  margin-left: 17px;
+  line-height: 2;
+  font-size: 16px;
+}
+
+/* CARRINHO DE COMPRA */
+.add-cart {
+  width: 100%;
+  height: 60px;
+  margin: 0;
+  background-color: black;
+  color: white;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.add-cart:hover {
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  border-style: none;
+  cursor: pointer;
+  border-top: 3px solid black;
+}
+
+/* BLOCOS DE CORES */
+.container {
+  width: 100%;
+  height: 40px;
+}
+
+.square {
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+  margin-top: 15px;
+  float: left;
+}
+
+.black {
+  background-color: #000;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: rgb(231, 231, 0);
+}
+
+.green {
+  background-color: green;
+}
+
+.brown {
+  background-color: brown;
+}
+
+/* SALE */
+.sale {
+  width: 70px;
+  height: 30px;
+  background-color: red;
+  text-align: center;
   position: absolute;
-  right: 340px;
-  top: -20px;
+  left: -40px;
+  top: -15px;
+  border: 0.5px solid black;
+}
+
+.pSale {
+  letter-spacing: 0.2rem;
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: white;
+  text-transform: uppercase;
+  margin-top: 3px;
 }
