--- a/01/style.css
+++ b/01/style.css
@@ -10,10 +10,11 @@ article {
   line-height: 1.3;
   margin: 50px auto;
   width: 825px;
+  position: relative;
 }
 
 .title {
-  height: 70px;
+  height: 60px;
   background-color: rgba(241, 236, 236, 0.616);
   text-align: center;
   text-transform: uppercase;
@@ -33,7 +34,7 @@ article {
   padding: 15px;
 }
 
-/* PRODUCT INFO */
+/* INFORMAÇÕES DO PRODUTO */
 .price {
   font-size: 1.5rem;
   font-weight: bolder;
@@ -70,7 +71,7 @@ article {
   font-size: 16px;
 }
 
-/* CART */
+/* CARRINHO DE COMPRA */
 .add-cart {
   width: 100%;
   height: 60px;
@@ -88,4 +89,59 @@ article {
   border-style: none;
   cursor: pointer;
   border-top: 3px solid black;
+}
+
+/* BLOCOS DE CORES */
+.container {
+  width: 100%;
+  height: 40px;
+}
+
+.square {
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+  margin-top: 15px;
+  display: inline-block;
+  /* float: left; */
+}
+
+.black {
+  background-color: #000;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: rgb(231, 231, 0);
+}
+
+.green {
+  background-color: green;
+}
+
+.brown {
+  background-color: brown;
+}
+
+/* SALE */
+.sale {
+  padding: 8px 16px;
+  background-color: red;
+  text-align: center;
+  display: inline-block;
+  position: absolute;
+  left: -30px;
+  top: -15px;
+  letter-spacing: 3px;
+  font-size: 13px;
+  font-weight: bold;
+  color: white;
+  text-transform: uppercase;
 }
