--- a/11/style.css
+++ b/11/style.css
@@ -6,6 +6,11 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 'default' 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
+/*
+MAIN COLOR: #087f5b
+GREY COLOR: #343a40
+*/
+
 * {
   margin: 0;
   padding: 0;
@@ -17,6 +22,9 @@ FONT SIZE SYSTEM (px)
 /* ------------------------ */
 body {
   font-family: "Inter", sans-serif;
+  color: #343a40;
+  border-top: 12px solid #087f5b;
+  border-bottom: 12px solid #087f5b;
 }
 
 .container {
@@ -41,6 +49,31 @@ h2 {
   column-gap: 80px;
 }
 
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  background-color: #087f5b;
+  padding: 16px 32px; /* Spacing system */
+  cursor: pointer;
+  font-weight: 500;
+  display: inline-block;
+  font-size: 18px;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
+
+.btn--small:link,
+.btn--small:hover {
+  padding: 8px 14px;
+  font-size: 14px;
+}
+/* 10 / 12 / 14 / 16 / 18  */
+
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -51,6 +84,7 @@ header {
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
   margin-top: 48px;
+  color: #495057;
 }
 
 .header-text-box {
@@ -88,8 +122,11 @@ img {
 }
 
 /* TESTIMONIAL */
-/* .testimonial-section {
-} */
+.testimonial-section {
+  background-color: #087f5b;
+  color: #fff;
+  padding: 24px;
+}
 
 .testimonial-box {
   grid-column: 2 / -1;
